<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScoreBoard</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="three_set">3 Set Match</string>
    <string name="five_set">5 Set Match</string>
    <string name="seven_set">7 Set Match</string>
    <string name="singles">Singles</string>
    <string name="doubles">Doubles</string>
    <string name="player_a">Player A</string>
    <string name="player_b">Player B</string>
    <string name="player_x">Player X</string>
    <string name="player_y">Player Y</string>
    <string name="start_text">Start</string>
    <string name="stop_text">Stop</string>
    <string name="finish_text">Finish Set</string>
    <string name="name_label_hint">Enter name here</string>
    <string name="forced_error">Forced error</string>
    <string name="unforced_error">Unforced Error</string>
    <string name="winner">winner</string>

</resources>