<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.akg.scoreboard.MainActivity" >

    <ImageView
        android:id="@+id/header_bg"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/header_height"
        android:background="@drawable/header" />

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/header_text_margin"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/header_text_size" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header_bg"
        android:layout_centerVertical="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/player_a_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/player_a_name_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/player_a_label"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="@dimen/default_text_lable_size"
                        android:text="@string/player_a" />

                    <TextView
                        android:id="@+id/player_b_label"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:textSize="@dimen/default_text_lable_size"
                        android:text="@string/player_b" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/player_a_edit_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/player_a_edit"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_label_hint"
                        android:textColor="@android:color/black" />

                    <EditText
                        android:id="@+id/player_b_edit"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_label_hint"
                        android:textColor="@android:color/black" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/player_x_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/player_a_layout"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/player_x_name_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/player_x_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="@dimen/default_text_lable_size"
                        android:text="@string/player_x" />

                    <TextView
                        android:id="@+id/player_y_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/default_text_lable_size"
                        android:layout_marginTop="30dp"
                        android:text="@string/player_y" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/player_x_edit_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/player_x_edit"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_label_hint"
                        android:textColor="@android:color/black" />

                    <EditText
                        android:id="@+id/player_y_edit"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_label_hint"
                        android:textColor="@android:color/black" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/three_set"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_below="@id/player_x_layout"
                android:textSize="@dimen/default_text_lable_size"
                android:text="@string/three_set" />

            <Button
                android:id="@+id/five_set"
                android:layout_width="fill_parent"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_text_lable_size"
                android:layout_below="@id/three_set"
                android:text="@string/five_set" />

            <Button
                android:id="@+id/seven_set"
                android:layout_width="fill_parent"
                android:textSize="@dimen/default_text_lable_size"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"
                android:layout_below="@id/five_set"
                android:text="@string/seven_set" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>