<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.akg.scoreboard.MainActivity" >

    <ImageView
        android:id="@+id/header_bg"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/header_height"
        android:background="@drawable/header" />

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/header_text_margin"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/header_text_size" />

    <Button
        android:id="@+id/singles"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:padding="5dp"
        android:text="@string/singles"
        android:textColor="@android:color/black"
        android:textSize="@dimen/default_text_lable_size" />

    <Button
        android:id="@+id/doubles"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/singles"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:padding="5dp"
        android:text="@string/doubles"
        android:textColor="@android:color/black"
        android:textSize="@dimen/default_text_lable_size" />
    
    
        <Button
        android:id="@+id/record"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/doubles"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:padding="5dp"
        android:text="Record Match"
        android:textColor="@android:color/black"
        android:textSize="@dimen/default_text_lable_size" />
    

</RelativeLayout>